Initial version with support for ordered mapping partitions